reorganize web resource, plus first portion of fixes from tomcat v9.0